--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-	--bg-color: #1e1e1e;
+	--bg-color0: #131313;
+	--bg-color1: #1e1e1e;
 	--bg-color2: #292929;
 	--bg-color3: #383838;
 	--text-color: #f2f2f2;
@@ -13,10 +14,40 @@
 }
 
 body {
-	background: var(--bg-color);
+	background: var(--bg-color1);
 	color: var(--text-color);
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
+}
+
+header {
+    background-color: var(--bg-color0);
+    padding: var(--spacing);
+    display: flex;
+    justify-content: flex-end;
+}
+
+header a {
+    color: var(--text-color);
+    font-size: 1.5rem;
+    margin-left: 1rem;
+    transition: color 0.3s ease;
+}
+
+header a:hover {
+    color: #007bff;
+}
+
+h1 {
+	display: flex;
+    text-align: center;
+	justify-content: center;
+	align-items: center;
+    font-family: 'Roboto';
+    font-weight: 800;
+    font-size: 1.875rem; /* 30pt converted to rem */
 }
 
 /* Center the form horizontally and vertically */
@@ -25,7 +56,6 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
 }
 
 /* Style the form label and input fields */
@@ -36,6 +66,7 @@ label {
 }
 
 input {
+	font-family: 'Roboto';
 	padding: 0.5rem;
 	font-size: 1rem;
 	border: none;
@@ -54,6 +85,7 @@ input:focus {
 
 /* Style the button */
 button {
+	font-family: 'Roboto';
 	padding: 0.5rem 1rem;
 	font-size: 1rem;
 	background-color: #007bff;
